--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   intl: ^0.18.1
   webview_flutter: ^4.2.0
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
@@ -24,6 +25,5 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
-    - icons/ic_launcher.png
-    - icons/AppIcon
+    - assets/icon/
   uses-material-design: true
